...
    <string name="reset">Reset</string>
    <string name="reaction_slot_description">Reaction %1$d, %2$s. Double tap to replace.</string>
    <string name="emoji_search_hint">Search emoji</string>
    <string name="emoji_search_clear">Clear emoji search</string>
    <string name="emoji_search_no_results">No emoji found</string>
    <string name="emoji_category_custom" translatable="false">Custom</string>
    <string name="emoji_category_recent" translatable="false">Recently Used</string>
    <string name="emoji_category_smileys_people" translatable="false">Smileys &amp; People</string>
    <string name="emoji_category_animals_nature" translatable="false">Animals &amp; Nature</string>
    <string name="emoji_category_food_drink" translatable="false">Food &amp; Drink</string>
    <string name="emoji_category_travel_places" translatable="false">Travel &amp; Places</string>
    <string name="emoji_category_activities" translatable="false">Activities</string>
    <string name="emoji_category_objects" translatable="false">Objects</string>
    <string name="emoji_category_symbols" translatable="false">Symbols</string>
...
